button and anchor used as button now same height

--- a/styleguide/scss/core/_core-buttons.scss
+++ b/styleguide/scss/core/_core-buttons.scss
@@ -21,6 +21,7 @@ button, input[type="button"], input[type="submit"], input[type="cancel"], a[role
     top: -1px;
     margin: 0;
     border: 0;
+    padding: 0;
     padding-left: 1rem;
     padding-right: 1rem;
     text-align: center;
