--- a/styleguide/scss/core/_core-forms.scss
+++ b/styleguide/scss/core/_core-forms.scss
@@ -33,6 +33,16 @@ option {
     font-family: $font-body;
 }
 
+button,
+input,
+optgroup,
+select,
+textarea,
+option, a[role="button"] {
+
+    outline: none;
+}
+
 form {
 
     margin: 0;
