--- a/styleguide/scss/core/_core-buttons.scss
+++ b/styleguide/scss/core/_core-buttons.scss
@@ -28,7 +28,8 @@ button, input[type="button"], input[type="submit"], input[type="cancel"], a[role
     text-decoration: none;
     vertical-align: middle;
     white-space: nowrap;
-    @include sf-set-color-scheme(button);
+    background-color: var(--sf-color-buttons);
+    color: var(--sf-color-buttons-contrast);
     border-radius: 0.15rem;
     cursor: pointer;
     font-size: 1rem;
